Fix: avoid Chrome visible line issue by removing the perspective rule where not necessary see https://github.com/presscustomizr/tc-unlimited-featured-pages/issues/133

--- a/assets/front/scss/0_1_base/_utilities.scss
+++ b/assets/front/scss/0_1_base/_utilities.scss
@@ -143,7 +143,6 @@ img.v-centered {
   margin: 8px auto;
   position: relative;
   @include backface-visibility( hidden );
-  @include perspective( 1000px );
   @include transform-style( preserve-3d );
   img {
     position: absolute;
