--- a/assets/front/scss/0_2_header/_common.scss
+++ b/assets/front/scss/0_2_header/_common.scss
@@ -305,7 +305,7 @@
           @include transition (all 0.3s ease);
           @include transform-style( preserve-3d );
           @include backface-visibility( hidden );
-          @include perspective(1000px);
+
           text-align: center;
           vertical-align: baseline;
           line-height: 0;
