--- a/assets/front/scss/0_2_header/_sidenav.scss
+++ b/assets/front/scss/0_2_header/_sidenav.scss
@@ -2,7 +2,6 @@
   position: fixed;
   visibility: hidden;
   outline: 1px solid;
-  @include perspective( 1000px );
   @include transform-style( preserve-3d );
   @include backface-visibility( hidden );
   @include transition( top 0.2s ease-in-out );
